; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/rtl818x/rtl8180/extr_dev.c_rtl8180_free_rx_ring.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/rtl818x/rtl8180/extr_dev.c_rtl8180_free_rx_ring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_hw = type { %struct.rtl8180_priv* }
%struct.rtl8180_priv = type { i32*, i32, i32, %struct.sk_buff** }
%struct.sk_buff = type { i64 }

@MAX_RX_SIZE = common dso_local global i32 0, align 4
@PCI_DMA_FROMDEVICE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ieee80211_hw*)* @rtl8180_free_rx_ring to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtl8180_free_rx_ring(%struct.ieee80211_hw* %0) #0 {
  %2 = alloca %struct.ieee80211_hw*, align 8
  %3 = alloca %struct.rtl8180_priv*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.sk_buff*, align 8
  store %struct.ieee80211_hw* %0, %struct.ieee80211_hw** %2, align 8
  %6 = load %struct.ieee80211_hw*, %struct.ieee80211_hw** %2, align 8
  %7 = getelementptr inbounds %struct.ieee80211_hw, %struct.ieee80211_hw* %6, i32 0, i32 0
  %8 = load %struct.rtl8180_priv*, %struct.rtl8180_priv** %7, align 8
  store %struct.rtl8180_priv* %8, %struct.rtl8180_priv** %3, align 8
  store i32 0, i32* %4, align 4
  br label %9

9:                                                ; preds = %37, %1
  %10 = load i32, i32* %4, align 4
  %11 = icmp slt i32 %10, 32
  br i1 %11, label %12, label %40

12:                                               ; preds = %9
  %13 = load %struct.rtl8180_priv*, %struct.rtl8180_priv** %3, align 8
  %14 = getelementptr inbounds %struct.rtl8180_priv, %struct.rtl8180_priv* %13, i32 0, i32 3
  %15 = load %struct.sk_buff**, %struct.sk_buff*** %14, align 8
  %16 = load i32, i32* %4, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.sk_buff*, %struct.sk_buff** %15, i64 %17
  %19 = load %struct.sk_buff*, %struct.sk_buff** %18, align 8
  store %struct.sk_buff* %19, %struct.sk_buff** %5, align 8
  %20 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %21 = icmp ne %struct.sk_buff* %20, null
  br i1 %21, label %23, label %22

22:                                               ; preds = %12
  br label %37

23:                                               ; preds = %12
  %24 = load %struct.rtl8180_priv*, %struct.rtl8180_priv** %3, align 8
  %25 = getelementptr inbounds %struct.rtl8180_priv, %struct.rtl8180_priv* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %28 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = inttoptr i64 %29 to i32*
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* @MAX_RX_SIZE, align 4
  %33 = load i32, i32* @PCI_DMA_FROMDEVICE, align 4
  %34 = call i32 @pci_unmap_single(i32 %26, i32 %31, i32 %32, i32 %33)
  %35 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %36 = call i32 @kfree_skb(%struct.sk_buff* %35)
  br label %37

37:                                               ; preds = %23, %22
  %38 = load i32, i32* %4, align 4
  %39 = add nsw i32 %38, 1
  store i32 %39, i32* %4, align 4
  br label %9

40:                                               ; preds = %9
  %41 = load %struct.rtl8180_priv*, %struct.rtl8180_priv** %3, align 8
  %42 = getelementptr inbounds %struct.rtl8180_priv, %struct.rtl8180_priv* %41, i32 0, i32 2
  %43 = load i32, i32* %42, align 4
  %44 = load %struct.rtl8180_priv*, %struct.rtl8180_priv** %3, align 8
  %45 = getelementptr inbounds %struct.rtl8180_priv, %struct.rtl8180_priv* %44, i32 0, i32 0
  %46 = load i32*, i32** %45, align 8
  %47 = load %struct.rtl8180_priv*, %struct.rtl8180_priv** %3, align 8
  %48 = getelementptr inbounds %struct.rtl8180_priv, %struct.rtl8180_priv* %47, i32 0, i32 1
  %49 = load i32, i32* %48, align 8
  %50 = call i32 @pci_free_consistent(i32 %43, i32 128, i32* %46, i32 %49)
  %51 = load %struct.rtl8180_priv*, %struct.rtl8180_priv** %3, align 8
  %52 = getelementptr inbounds %struct.rtl8180_priv, %struct.rtl8180_priv* %51, i32 0, i32 0
  store i32* null, i32** %52, align 8
  ret void
}

declare dso_local i32 @pci_unmap_single(i32, i32, i32, i32) #1

declare dso_local i32 @kfree_skb(%struct.sk_buff*) #1

declare dso_local i32 @pci_free_consistent(i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
